src/objects/Third_Party__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Broker_Name__c</fullName>
        <description>Agency/Broker name, from the explore page.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency/Broker Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Third Parties</relationshipLabel>
        <relationshipName>Third_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Admin_Type__c</fullName>
        <description>Customer admin type, based on the originator selected on the Explore page.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Admin Type</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Type__c</fullName>
        <label>Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Facility</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>First Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flow Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Franchise_Code__c</fullName>
        <description>Franchise code associated to the General Agent</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Franchise Code</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Name</label>
        <length>121</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Agency__c</fullName>
        <description>General Agency, from the explore page.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>General Agency</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Get_Encrypted_Fields__c</fullName>
        <description>Get First Name, Last Name, Phone, Email fields for a query as they are encrypted and can&apos;t be accessed regularly</description>
        <formula>First_Name__c + &apos;|||||&apos; +  LastName__c + &apos;|||||&apos; +  Email__c + &apos;|||||&apos; +  Phone_Number__c + &apos;|||||&apos; +  Group_Name__c + &apos;|||||&apos; +  Group_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Get Encrypted Fields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Group Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Group Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>Last name for 80</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Last Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_PostalCode__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Mailing PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mailing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>NPI</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Admin_Type__c</fullName>
        <description>Other admin type value, based on the originator selected on the Explore page.</description>
        <label>Other Admin Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Other_Admin_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Originator__c</fullName>
        <label>Other Originator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Caregiver</fullName>
                </value>
                <value>
                    <fullName>Collection Agency</fullName>
                </value>
                <value>
                    <fullName>Family/Friend/Spouse</fullName>
                </value>
                <value>
                    <fullName>Health Advocate</fullName>
                </value>
                <value>
                    <fullName>Insurance Carrier</fullName>
                </value>
                <value>
                    <fullName>Interpreter for Member</fullName>
                </value>
                <value>
                    <fullName>Parent/Guardian/Custody Holder</fullName>
                </value>
                <value>
                    <fullName>Personal Representative</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Power of Attorney</fullName>
                </value>
                <value>
                    <fullName>Prospective Member</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Reporter</fullName>
                </value>
                <value>
                    <fullName>State Regulatory Agent/Government Agency</fullName>
                </value>
                <value>
                    <fullName>UHG Employee</fullName>
                </value>
                <value>
                    <fullName>Spouse On Plan</fullName>
                </value>
                <value>
                    <fullName>Spouse Not on Plan</fullName>
                </value>
                <value>
                    <fullName>Family/Friend</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Group Contact</fullName>
                </value>
                <value>
                    <fullName>Authorized Individual</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Phone Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <description>Policy Number found on the Group Details.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Number</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practicing_Status__c</fullName>
        <label>Practicing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Active and Termed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Producer_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Producer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Producer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Producer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Speciality__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Speciality</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reward_Account_Number__c</fullName>
        <description>Reward account number associated to the Agency/Broker</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reward Account Number</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Tax ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Third Party</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Group_Name__c</columns>
        <columns>LastName__c</columns>
        <columns>NPI__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Tax_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Email__c</columns>
        <columns>FullName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FullName__c</field>
            <operation>contains</operation>
            <value>Henderson</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TP #-{0000000000}</displayFormat>
        <label>Third Party #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Third Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>